<resources>
    <string name="scroll_behavior">@string/appbar_scrolling_view_behavior</string>
    <string name="detail_header_behavior">wizrole.hoservice.view.DetailHeaderBehavior</string>
    <string name="app_name">住院服务</string>
    <string name="login_system">患者住院服务登录</string>
    <string name="auto_login">自动登录</string>
    <string name="auto_login_succ">自动登录成功</string>
    <string name="please_write_name">请输入入院登记号</string>
    <string name="please_write_tel">请输入入院预留手机号码</string>
    <string name="login">登录</string>
    <string name="no_sd">未找到存储卡，无法存储照片！</string>
    <string name="tel_djh_no">登记号与手机号码不匹配</string>
    <string name="patient_no_hos">当前患者不在院</string>
    <string name="login_auto_fail">自动登录失败，请检查网络！</string>
    <string name="login_success">登录成功</string>
    <string name="userName_err">入院编号错误</string>
    <string name="systom_no_search">系统未查询到</string>
    <string name="userName_rule">入院编号格式不合法</string>
    <string name="id_err">手机号码错误</string>
    <string name="id_rule">手机号码长度11位，请查证后输入</string>
    <string name="name_password_err">入院编号或手机号码不匹配</string>
    <string name="name_password">入院编号或手机号码错误，请查证后输入</string>
    <string name="no_look_err">系统中未查询到结果，请查证后输入</string>
    <string name="no_hos">登录失败</string>
    <string name="no_hos_err">当前患者不在院，请查证后输入</string>
    <string name="name_null">入院编号不存在，请重新输入</string>
    <string name="drawer_open">开</string>
    <string name="drawer_close">关</string>
    <string name="first_page">住院智能服务系统</string>
    <string name="set">设置中心</string>
    <string name="now_go_login">当前你未登录，请登录后进行安全设置！</string>
    <string name="about">关于我们</string>
    <string name="start">请选择开始时间</string>
    <string name="start_time">开始时间为:</string>
    <string name="end">请选择结束时间</string>
    <string name="end_time">结束时间为:</string>
    <string name="help">帮助说明</string>
    <string name="s_e_text">提示:起止时间范围为一个星期</string>
    <string name="zhuxiao">注销</string>
    <string name="nav_name">患者姓名：</string>
    <string name="person_infor">个人信息</string>
    <string name="pay_list">费用清单</string>
    <string name="doc_advice">检查医嘱</string>
    <string name="base_infor">基本信息</string>
    <string name="hos_infor">住院信息</string>
    <string name="med_message">医疗消息 </string>
    <string name="hos_system">住院服务</string>
    <string name="health_know">健康知识</string>
    <string name="search_result">搜索结果</string>
    <string name="yshg">月嫂护工</string>
    <string name="eat">餐饮点餐</string>
    <string name="my_order">我的订单</string>
    <string name="no_sore">当前暂无商家</string>
    <string name="shopping">超市购物</string>
    <string name="doc_intrduce">专家介绍</string>
    <string name="dria">住院指南</string>
    <string name="abouthos">关于我院</string>
    <string name="service">住院服务</string>
    <string name="free_jn">押金缴纳</string>
    <string name="free_jl">缴费记录</string>
    <string name="xmxq">项目详情</string>
    <string name="xmlb">项目列表</string>
    <string name="edit_free_num">请输入缴费金额</string>
    <string-array name="pay">
        <item>清单明细</item>
        <item>统计信息</item>
    </string-array>
    <string name="selcet_date">选择查看日期</string>
    <string name="see_date">你当前查看的日期是：</string>
    <string name="year">年</string>
    <string name="set_day">设置日期信息</string>
    <string name="set_s_day">设置开始日期</string>
    <string name="set_e_day">设置结束日期</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="base_infor_fail">基本信息获取失败</string>
    <string name="name">姓名：</string>
    <string name="safe_center">安全中心</string>
    <string name="sex">性别：</string>
    <string name="tel">电话号码：</string>
    <string name="hos_number">住院号：</string>
    <string name="brith">出生日期：</string>
    <string name="department">入院科室：</string>
    <string name="diagnosis">诊断：</string>
    <string name="docMedUnit">医疗单元：</string>
    <string name="ward">病区：</string>
    <string name="FeeSelf">余额：</string>
    <string name="data_hos">入院日期：</string>
    <string name="hos_jz">就诊号：</string>
    <string name="examine_type">检查项目</string>
    <string name="number">数量</string>
    <string name="price">总价 </string>
    <string name="med_type">药品名称</string>
    <string name="surgery_type">手术项目</string>
    <string name="back">返回</string>
    <string name="login_again">请重新登录，修改手势密码</string>
    <string name="login_again_clear">重新登录验证成功后，可由【设置中心】新建手势密码，请牢记！</string>
    <string name="aleradly_select">已选</string>
    <string name="company_intrduce">\t\t\t\t北京维思陆科技有限公司位于中关村科技园望京科技园区，是国家高新技术企业
        、双软企业、中国医院信息协会理事单位、国家科技创新基金扶持企业。</string>
    <string name="company_intrduce_two">\t\t\t\t北京维思陆科技有限公司定位于医疗服务信息化和智能区域医疗领域，
        拥有十多年信息化服务从业经验的强大专业团队，致力于打造医疗服务信息化领域业务专耕、体系完备、资源集中的企业平台</string>
    <string name="company_intrduce_three">\t\t\t\t维思陆以成就客户为目的，依靠强大的技术实力和优质的服务，以更有竞争力的产品
    和服务充分满足广大客户的需求，实现与客户的长期合作与共赢</string>
    <string name="company_add">\t\t\t\t公司地址：北京市朝阳区红军营南路安鑫办公F2-30</string>
    <string name="company_tel">\t\t\t\t电话：010-84712666</string>
    <string name="about_my_hos">\t\t\t\t徐州市中心医院暨东南大学附属徐州医院始建于1953年，目前是淮海经济区规模大、综合实力强、技术水平高、百姓口碑好的三级甲等综合性医院。医院现占地24.4万平米，建筑面积47万平米，目前高层建筑3幢、多层建筑7幢。坚持“以病人为中心、以质量为核心、以医生为轴心、以服务献爱心”的服务理念，为病人提供了优质、高效、安全、方便的服务，取得了良好的社会效益和经济效益，先后获得全国卫生系统先进集体、全国模范职工之家、全国改革创新医院、全国百姓放心百佳示范医院、江苏省文明单位、江苏省卫生系统先进集体等荣誉称号。</string>
    <string name="rencai">人才队伍:</string>
    <string name="rencai_de">全院现有职工总数5239人，其中高级职称721人，博士、硕士研究生783人，享受国务院特殊津贴者8人，全国卫生系统先进工作者2人，省医生终身荣誉奖3人，省专业技术二级岗位（正高二级）1人，省六大高峰人才17人，江苏省有突出贡献专家8人，省333工程培养对象38人，江苏省医学重点人才2人，江苏省双创博士12人、徐州市双创博士1 人；徐州市优秀专家、拔尖人才59人，徐州市医学领军人才培养对象5人，博士、硕士生导师123人，省级以上学会主任委员、副主任委员32人。</string>
    <string name="jishu">技术力量:</string>
    <string name="jishu_de">拥有86个临床专业（病区）、27个医技专业。其中
省级临床重点专业11个：心血管内科、急诊医学科、口腔科、康复科、泌尿外科、内分泌科、妇科、肿瘤内科、骨科、影像科（放射科、超声科、CT 核磁、介入微创外科）、中医科；
国家级示范中心：胸痛中心
江苏省医学创新团队：泌尿外科
国家卫计委内镜与微创医学培训基地8个：泌尿外科、普外科、骨科、妇产科、胸外科、耳鼻喉头颈外科、消化内科、血管介入科
徐州市市级诊疗中心3个：心血管病诊疗中心、康复医学诊疗中心、内分泌诊疗中心
    徐州市级临床重点专业33个：重症医学科、普外科(血甲疝微创外科、肝胆胰脾外科、乳腺外科、胃肠外科、肛肠科)、产科、神经外科、 眼科、心外科、胸外科、放疗科、呼吸科、肾内科、儿科、生殖中心（建设单位）、血液科、消化科、神经内科、风湿科、整形外科、麻醉科、核医学科、药 剂 科、检 验 科、病理科、心血管护理、危重症护理、急诊急救护理、普外科护理、肾内科护理。
    徐州市重点实验室5个：内分泌与代谢病实验室、重症医学实验室、HLA基因测序实验室、临床免疫与变态反应实验室、心血管分子生物学实验室。
    国家药监总局认定的国家药物临床试验机构9个：口腔科、内分泌科、妇产科、肿瘤内科、肿瘤外科、神经内科、呼吸科、风湿免疫科、骨科
 徐州市医疗急救中心、徐州市道路交通事故抢救中心也设在我院。</string>
    <string name="yiliao">医疗设备:</string>
    <string name="yiliao_de">医院主体建筑楼目前有：门诊病房楼、医技病房楼、心脏诊疗中心楼、肿瘤诊疗研究所楼（原综合病房楼）、儿童诊疗中心楼、体检中心等。医院开放床位逾5500张，拥有先进的病房设施和重症监护病房，具有较强的院前、院内综合急救能力。拥有设备总量、总额、先进性区域领先， PET—CT、640排CT、宝石能谱CT、64排螺旋CT、核磁共振(3.0T)、1.5T核磁共振、心血管造影机、瑞士瓦里安直线加速器、飞秒激光等设备，万元以上设备4318台，设备总值7.85亿元。</string>
    <string name="keyan">科研教学:</string>
    <string name="keyan_de">医院现为东南大学医学院附属徐州医院、南京中医药大学附属徐州中心医院、南京中医药大学徐州中西医结合临床医学院、徐州医学院徐州临床学院、山东潍坊医学院徐州口腔临床学院，徐州市心血管病研究所、徐州市医学科学研究所、东南大学（徐州）肿瘤研究所、东南大学（徐州）生殖医学研究所，设有国家人社部批准的博士后科研工作站。院士工作站，已有口腔科张志愿、泌尿外科孙颖浩2位院士先后进站。建立了先进的中心实验室和临床技能培训中心， 医院被授予国家住院医师规范化培训基地，31个专业通过现场验收，数量位居全省第一；是江苏省首批全科医生规范化培养示范基地、江苏省住院医师规范化培养基地、江苏省医师定期考核机构、江苏省医师变更执业范围（临床类别）业务培训机构、淮海经济区基层医疗骨干培训基地。</string>
    <string name="menji">门急诊服务:</string>
    <string name="menji_de">在全市率先推出周日专家门诊、专家全日制门诊、专科专病门诊、名专家会诊中心、预约门诊等特色门诊。制定并完善了中毒、创伤、急性心肌梗死与恶性心律失常、脑卒中四种危重病的急救流程，急救绿色通道更加畅通；开通了网上预约、现场预约、电话预约等多种挂号方式，开通了掌上门诊，支付宝服务窗，可以网上查阅检验报告、自助挂号，自助打印检验报告单等服务；所有医技科室均实行了限时服务，成立了“医院志愿者服务队”，在就诊高峰期协助门诊管理。推出 96120健康呼叫热线，开展预约挂号、导医导诊、专家咨询健康热线服务。在门诊大厅开展义诊服务及疑难杂症义诊专场。
     住院服务：医院成立住院病人服务中心，帮助病人从入院、住院到出院全程生活服务。在全国率先实施住院医疗费用一日一清单制度。积极开展医患沟通，开展健康教育，各病种病友联谊会定期召开，寓教于乐深受欢迎。医保农保政策讲解到床头、订饭送饭到床头、自费出院结算到床头、新农合住院病人现场直报。要住院到四院，在徐州乃至周边地区形成共识。</string>
    <string name="yiyuan">医院文化:</string>
    <string name="yiyuan_de">全体医护人员牢牢树立“大医至精、大德至诚、大术至臻、大爱至仁”的院训，全员树立“真诚为患者、永远是朋友”的服务理念。机关工作人员做到“员工至尊、患者至上、忠于职守、乐于奉献”，临床医护人员做到“看一个病人、献一片爱心、树一次形象、交一个朋友”。</string>
    <string name="fuwu">服务能力:</string>
    <string name="fuwu_de">医疗服务辐射苏鲁豫皖四省接壤地区近20个地市、147个县区；新城区医院（脑科医院）一期工程建筑面积16万平方米，配有一流的CT、核磁、X光机、DSA、超声、生化检验仪等设备，拥有先进的手术室和重症监护室，分门诊、急诊和11个住院病区，开放床位600张，2016年分院完成门诊量110476人次，住院病人9020人次，手术903例次。
             医院托管了徐州市医学科学研究所，筹建内分泌代谢病医院；兼并了原老年病医院，创建徐州市康复医院（三级医院），托管睢宁县双沟中心卫生院。在苏鲁豫皖四省接壤地区，建成的“徐州市中心医院医疗集团”，下辖26家二级以上医院、200家乡镇卫生院、10余家社区卫生服务中心。
      2016年，医院门诊量291万人次，出院病人数19.4万人次，手术人数6.7万人次，出院病人数和手术例数位居全省第一，门诊量位居苏北第一。2012—2014年连续三年获得全省三级医院出院病人问卷调查满意度第一名。</string>
    <string name="one">入院接诊程序</string>
    <string name="two">\t\t病人拿入院通知单到护士中心站---办公护士安排床位、通知医生---责任护士护理查体---责任护士做入院宣传---责任护士执行医嘱</string>
    <string name="three">出院须知</string>
    <string name="four">\t\t1、遵照医嘱坚持服药，不可擅自停药或减药，病人服药期间，如出现病情变化，及时来院就诊。</string>
    <string name="five">\t\t2、观察病人的饮食和排便情况。</string>
    <string name="six">\t\t3、正确对待患者，尽量避免精神刺激，以减轻精神压力，保持精神愉快。</string>
    <string name="seven">\t\t4、做好对病人的安全监护，以防自伤、伤人或毁物发生。</string>
    <string name="eight">\t\t5、家属须注意病人进食过程中的安全，病人有无药物反应。</string>
    <string-array name="order_time">
        <item>尽快送达</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
    </string-array>
    <string name="erweima">请使用\t\t【支付宝】\t\t扫描二维码进行押金缴纳！</string>
    <string name="mzyygh_one">\t\t\t尊敬的患者朋友，为方便您就医，徐州市中心医院专家门诊提供预约挂号服务，为方便您按时、有序就诊，避免长时间候诊，欢迎您选择门诊分时段预约。</string>
    <string name="mzyygh_two">\t\t\t一、预约方式：现场、电话、诊间预约、手机预约、网上预约五种（需要提供身份证号码），普通门诊、专家门诊均可预约。</string>
    <string name="mzyygh_three">\t\t\t二、预约时间（现场预约提前半天以上，其他预约提前1-7天）。</string>
    <string name="mzyygh_four">\t\t\t\t\t\t现场预约：挂号收费处， 时间：正常上班时间。</string>
    <string name="mzyygh_five">\t\t\t\t\t\t电话预约：提前1-7天，即可开始预约。</string>
    <string name="mzyygh_six">\t\t\t\t\t\t时\t\t间：7*24小树提供电话预约服务，预约电话：0516-96120</string>
    <string name="mzyygh_seven">\t\t\t现场预约：挂号收费处，正常上班时间。</string>
    <string name="mzyygh_eight">\t\t\t\t\t\t诊间预约：门诊医生登陆门诊医生工作站完成预约，正常上班时间。</string>
    <string name="mzyygh_nine">\t\t\t\t\t\t出院预约：住院所在科室医生在病区登陆医生工作站完成预约，正常上班时间。</string>
    <string name="mzyygh_ten">\t\t\t\t\t\t网络预约：省集约平台：http://js.guahao.com，提前1-7天，可在任意时间预约。</string>
    <string name="mzyygh_ele">\t\t\t\t\t\t手机预约：手机登陆点击掌上门诊，下载手机客户端后即可进行手机预约，提前1-7天，可在任意时间预约。</string>
    <string name="mzyygh_twl">\t\t\t三、温馨提示</string>
    <string name="mzyygh_third">\t\t\t1.预约挂号一律采用实名制，请提供姓名、身份证号码、就诊卡号、联系电话（最好为手机号码，以便医生停诊时医院电话通知）等真实信息。网上预约时请按照网页上提示填写预约表单。</string>
    <string name="mzyygh_fourt">\t\t\t2.预约成功后，请您根据预约时间，在就诊日提前30分钟至挂号收费处取号后至就诊区域候诊。逾时15分钟未到者，视为本次预约自动放弃，医院将收回其预约的名额，以便将有限的资源留给其他的患者。</string>
    <string name="mzyygh_fit">\t\t\t3.如预约者需变更预约，请拨打0516-96120取消本次预约或登陆医院网站取消预约。</string>
    <string name="mzyygh_sixt">\t\t\t4.专家门诊时间以当日公布为准，如专家坐诊时间出现临时变更，我们将根据您的要求再次确定预约时间或安排相当级别专家为您接诊。</string>
    <string name="mzyygh_sevt">\t\t\t5.对70岁以上老人、残疾人等特殊人群优先安排。</string>
    <string name="mzyygh_eightt">\t\t\t6.以上条款最终解释权归徐州市中心医院所有，如有疑问，请拨打：051683956035咨询。</string>
    <string name="wifi_err">数据获取失败，请检查网络</string>
    <string name="wifi_err_try_again">重新加载</string>
    <string name="data_numm">当前暂无数据</string>
    <string name="null_pay_list">当前日期暂无费用清单</string>
    <string name="text_scroll_title">当前网络连接失败</string>
    <string name="text_scroll_content">很抱歉，网络数据获取失败，请检查网络后重试！</string>
    <string name="no_advice">很抱歉，当前日期暂无检查医嘱！</string>
    <string name="buildmap">院内建筑分布及楼层索引</string>
    <string name="deparent_list">科室列表</string>
    <string name="deparent_intrduces">科室介绍</string>
    <string name="deparent_doc">科室医生</string>
    <string name="no_deparent">无科室列表</string>
    <string name="mc">名称：</string>
    <string name="gs">概述：</string>
    <string name="zzqy">症状起因：</string>
    <string name="jbzd">鉴别诊断：</string>
    <string name="rhyf">如何预防：</string>
    <string name="ysyj">饮食宜忌：</string>
    <string name="zlff">治疗方法：</string>
</resources>