<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/status"
        android:background="@color/text_bule"
        android:fitsSystemWindows="true"/>
    <include
        layout="@layout/title_back"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginRight="30px"
            android:layout_marginLeft="30px"
            android:paddingBottom="30px"
            android:background="@color/white"
            android:layout_height="match_parent">
            <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="预约挂号须知"
            android:textSize="@dimen/text_center"
            android:gravity="center"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_one"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_two"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_three"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_four"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_five"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_six"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_eight"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_nine"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_ten"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_ele"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_twl"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_third"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_fourt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_fit"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_sixt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_sevt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:textSize="@dimen/text_cs"
                android:text="@string/mzyygh_eightt"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>