<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/status"
        android:background="@color/text_bule"
        android:fitsSystemWindows="true"/>
    <include
        layout="@layout/title_back"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="90px"
        />
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="400px"
        android:layout_gravity="center"
        android:layout_height="200px"
        android:src="@drawable/wizrole"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="40px"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="130px"
            android:text="北京维思陆科技有限公司"
            android:gravity="center"
            android:textSize="@dimen/text_content"
            android:layout_marginLeft="40px"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/text_bule"
        />
    <TextView
        android:layout_marginTop="60px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_intrduce"
        android:layout_gravity="center"
        android:textSize="@dimen/text_center"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="40px"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_intrduce_two"
        android:layout_gravity="center"
        android:textSize="@dimen/text_center"

        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="40px"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_intrduce_three"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:textSize="@dimen/text_center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="40px"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="30px"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_add"
        android:textSize="@dimen/text_center"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_tel"
        android:textSize="@dimen/text_center"
        />
</LinearLayout>