<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/danhui"
    tools:context="wizrole.hoservice.activity.LoginActivity">
    <View
        android:id="@+id/view_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/status"
        android:layout_alignParentTop="true"
        android:background="@color/text_bule"
        android:fitsSystemWindows="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_bg"
        >
        <include
            layout="@layout/title_back"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:textSize="@dimen/text_center"
            android:layout_marginLeft="100px"
            android:layout_marginRight="100px"
            android:hint="@string/please_write_name"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/name_lock"
            android:background="@drawable/edit_login_bg"
            android:maxLines="1"
            android:inputType="number"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:textSize="@dimen/text_center"
            android:layout_marginLeft="100px"
            android:layout_marginRight="100px"
            android:hint="@string/please_write_tel"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/password_lock"
            android:background="@drawable/edit_login_bg"
            android:inputType="number"
            android:drawablePadding="10dp"
            android:maxLines="1"
            />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90px"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="100px"
                android:layout_marginRight="100px"
                >
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />
                <CheckBox
                    android:id="@+id/check_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/text_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/auto_login"
                    android:textSize="@dimen/text_samll"
                    android:layout_alignParentRight="true"
                    />

            </LinearLayout>
        <Button
            android:layout_marginTop="120px"
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="110px"
            android:layout_marginLeft="100px"
            android:layout_marginRight="100px"
            android:textSize="@dimen/text_center"
            android:textColor="@color/white"
            android:text="@string/login"
            android:background="@drawable/login_sel"
            android:layout_weight="1"
            />

    </LinearLayout>
</RelativeLayout>
