<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/white"
              android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/status"
        android:layout_alignParentTop="true"
        android:background="@color/text_bule"
        android:fitsSystemWindows="true"/>
    <include
        layout="@layout/title_back"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30px"
        android:paddingBottom="30px"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110px"
            android:orientation="horizontal"
            android:layout_marginRight="30px"
            android:layout_marginLeft="30px"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mc"
                android:textSize="@dimen/text_cs"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/test_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_cs"
                android:layout_marginLeft="40px"
                android:gravity="center"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:background="@color/danhui"
            />
        <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="30px"
            android:layout_marginLeft="30px"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="110px"
                android:text="@string/gs"
                android:gravity="center"
                android:textSize="@dimen/text_cs"
                />
            <TextView
                android:layout_marginTop="20px"
                android:id="@+id/test_gs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:textSize="@dimen/text_cs"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:background="@color/danhui"
            />
        <!--病因-->
        <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="30px"
            android:layout_marginLeft="30px"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="110px"
                android:text="@string/zzqy"
                android:gravity="center"
                android:textSize="@dimen/text_cs"
                />
            <TextView
                android:layout_marginTop="20px"
                android:id="@+id/test_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:textSize="@dimen/text_cs"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:background="@color/danhui"
            />
        <!--症状-->
        <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="30px"
            android:layout_marginLeft="30px"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="110px"
                android:text="@string/jbzd"
                android:gravity="center"
                android:textSize="@dimen/text_cs"
                />
            <TextView
                android:layout_marginTop="20px"
                android:id="@+id/test_zz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:textSize="@dimen/text_cs"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:background="@color/danhui"
            />
        <!--检查-->
        <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="30px"
            android:layout_marginLeft="30px"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="110px"
                android:text="@string/rhyf"
                android:gravity="center"
                android:textSize="@dimen/text_cs"
                />
            <TextView
                android:layout_marginTop="20px"
                android:id="@+id/test_jc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:textSize="@dimen/text_cs"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:background="@color/danhui"
            />
        <!--治疗-->
        <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="30px"
            android:layout_marginLeft="30px"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="110px"
                android:text="@string/ysyj"
                android:gravity="center"
                android:textSize="@dimen/text_cs"
                />
            <TextView
                android:layout_marginTop="20px"
                android:id="@+id/test_zl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:textSize="@dimen/text_cs"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:background="@color/danhui"
            />
        <!--并发症-->
        <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="30px"
            android:layout_marginLeft="30px"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="110px"
                android:text="@string/zlff"
                android:gravity="center"
                android:textSize="@dimen/text_cs"
                />
            <TextView
                android:layout_marginTop="20px"
                android:id="@+id/test_bfz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:textSize="@dimen/text_cs"
                />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>